--- a/packages/next/src/styles/global.scss
+++ b/packages/next/src/styles/global.scss
@@ -23,9 +23,9 @@ input,
 textarea,
 select,
 button {
-  font-family: Arial, Helvetica Neue, -apple-system, BlinkMacSystemFont,
-    'Segoe UI', Roboto, Helvetica, sans-serif, 'Apple Color Emoji',
-    'Segoe UI Emoji', 'Segoe UI Symbol';
+  font-family: Quicksand, Arial, Helvetica Neue -apple-system,
+    BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, sans-serif,
+    'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
 }
 
 *,
@@ -57,8 +57,56 @@ html {
   ::-webkit-scrollbar-track {
     background-color: rgba(255, 255, 255, 0.1);
   }
+
+  font-family: 'Quicksand';
 }
 
 .test {
   background-color: red;
+}
+
+// MY CONFIG
+// h1 {
+//   font-family: Quicksand;
+//   font-size: 24px;
+//   font-style: normal;
+//   font-variant: normal;
+//   font-weight: 700;
+//   line-height: 26.4px;
+// }
+// h3 {
+//   font-family: Quicksand;
+//   font-size: 14px;
+//   font-style: normal;
+//   font-variant: normal;
+//   font-weight: 700;
+//   line-height: 15.4px;
+// }
+// p {
+//   font-family: Quicksand;
+//   font-size: 14px;
+//   font-style: normal;
+//   font-variant: normal;
+//   font-weight: 400;
+//   line-height: 20px;
+// }
+// blockquote {
+//   font-family: Quicksand;
+//   font-size: 21px;
+//   font-style: normal;
+//   font-variant: normal;
+//   font-weight: 400;
+//   line-height: 30px;
+// }
+// pre {
+//   font-family: Quicksand;
+//   font-size: 13px;
+//   font-style: normal;
+//   font-variant: normal;
+//   font-weight: 400;
+//   line-height: 18.5714px;
+// }
+
+div {
+  font-family: 'Quicksand';
 }
