--- a/packages/next/src/styles/global.scss
+++ b/packages/next/src/styles/global.scss
@@ -38,28 +38,31 @@ p {
   margin-block-start: auto;
   margin-block-end: auto;
 }
+// NOTE: CANNOT SELECT TEXT
+// *:not(input):not(textarea):not([contenteditable]) {
+// -webkit-user-select: none;
+// }
 
-*:not(input):not(textarea):not([contenteditable]) {
-  -webkit-user-select: none;
-}
+// NOTE: DISABLE SCROLL BAR
+// html {
+//   -ms-overflow-style: none; /* Internet Explorer 10+ */
+//   scrollbar-width: none; /* Firefox */
+//   ::-webkit-scrollbar {
+//     display: none; /* Safari and Chrome */
+//   }
 
-html {
-  -ms-overflow-style: none; /* Internet Explorer 10+ */
-  scrollbar-width: none; /* Firefox */
-  ::-webkit-scrollbar {
-    display: none; /* Safari and Chrome */
-  }
+//   ::-webkit-scrollbar-thumb {
+//     background-color: rgba(255, 255, 255, 0.1);
+//   }
 
-  ::-webkit-scrollbar-thumb {
-    background-color: rgba(255, 255, 255, 0.1);
-  }
+//   ::-webkit-scrollbar-track {
+//     background-color: rgba(255, 255, 255, 0.1);
+//   }
 
-  ::-webkit-scrollbar-track {
-    background-color: rgba(255, 255, 255, 0.1);
-  }
+//   font-family: 'Quicksand';
+// }
 
-  font-family: 'Quicksand';
-}
+// STUB: Custom
 
 .test {
   background-color: red;
@@ -111,3 +114,56 @@ div {
   font-family: 'Quicksand';
   font-style: italic;
 }
+
+// /* width */
+// ::-webkit-scrollbar {
+//   width: 4px;
+// }
+
+// /* Track */
+// ::-webkit-scrollbar-track {
+//   background: #f1f1f1;
+// }
+
+// /* Handle */
+// ::-webkit-scrollbar-thumb {
+//   background: #888;
+// }
+
+// /* Handle on hover */
+// ::-webkit-scrollbar-thumb:hover {
+//   background: #555;
+// }
+
+// body {
+//   overflow: scroll; /* Show scrollbars */
+// }
+
+// NOTE: CUSTOM SCROLLBAR
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey;
+  border-radius: 12px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: rgba(14, 26, 39, 0.233);
+  border-radius: 12px;
+  transition: all 5s ease-in-out;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: rgba(85, 85, 85, 0.568);
+}
+
+// ::-webkit-scrollbar-button {
+//   // width: 10px;
+//   display: block;
+// }
